# holiday-drawing-backend

./: .gitignore  .pylintrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  settings.py  urls.py
accounts/: admin.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
drawings/: admin.py  models.py  serializers.py  views.py
drawings/migrations/: 0001_initial.py  0002_auto_20211115_0400.py  0003_drawingresult_drawing.py  0004_remove_participant_user.py  0005_drawingomissionrequest_drawing.py
